Add transfer deposit endpoint (#4)
